--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "id": "67cd60de-896e-4437-8226-01a6d96edba7",
   "name": "SD Seminar",
   "publisher": "D.E. Veloper",
-  "brief": "",
+  "brief": "JUNJIESUN",
   "description": "",
   "version": "1.0.0.0",
   "privacyStatement": "",
